[tool.poetry]
name = "condgen"
version = "0.1.0"
description = ""
authors = ["Edward De Brouwer <edward.debrouwer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pytorch-lightning = "^1.6.0"
wandb = "^0.12.11"
pandas = "^1.4.1"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
lifelines = "^0.27.0"
torchdiffeq = "^0.2.2"
ipdb = "^0.13.9"
torchvision = "^0.12.0"
plotly = "^5.6.0"
jupyterlab = "^3.3.2"
jupyterlab-widgets = "^1.1.0"
seaborn = "^0.11.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
